# cpm_lab

./: .gitignore  .gitlab-ci.yml  .gitlab-ci.yml~  .gitmodules  DoxygenMainpage.hpp  Doxygen_software_files.hpp  Installation.md  LICENSE  README.md  Readme.md  build_all.bash  doxygen_config  doxygen_notes.md  get_bash_directory_test.bash  install.sh  launch_distributed.bash  launch_local.bash  launch_script_example.bash  launch_test_loop.bash  quick_install.sh  rti_installer_automation.sh  setup_cpm_build_environment.sh  sync_spi_changes.txt  update_nucs.bash
LabControlCenter/: CMakeLists.txt  LCC.desktop  all_received_logs.csv  build.bash  lab_yaml_test_out.yaml  möp.yaml  new_params.yaml  parameters.yaml  reboot_raspberry.bash  start_lcc.bash
LabControlCenter/bash/: copy_to_remote.bash  environment_variables.bash  environment_variables_local.bash  remote_kill.bash  remote_start.bash  tmux_middleware.bash  tmux_script.bash
LabControlCenter/labcam/: CMakeLists.txt
LabControlCenter/recording/: record.bash  rti_recording_config_template.xml
LabControlCenter/src/: AbsoluteTimer.cpp  CommandLineReader.hpp  CommonroadObstacleSim.cpp  CommonroadObstacleSim.hpp  HLCReadyAggregator.cpp  HLCReadyAggregator.hpp  Joystick.cpp  Joystick.hpp  LCCErrorLogger.cpp  LCCErrorLogger.hpp  LogLevelSetter.cpp  LogLevelSetter.hpp  LogStorage.cpp  LogStorage.hpp  ObstacleAggregator.cpp  ObstacleAggregator.hpp  ObstacleSimulation.cpp  ObstacleSimulation.hpp  ObstacleSimulationManager.cpp  ObstacleSimulationManager.hpp  ParameterServer.cpp  ParameterServer.hpp  ParameterStorage.cpp  ParameterStorage.hpp  ParameterWithDescription.hpp  Point.hpp  TimeSeries.cpp  TimeSeries.hpp  TimeSeriesAggregator.cpp  TimeSeriesAggregator.hpp  TimerControl.cpp  TimerControl.hpp  TimerTrigger.cpp  TimerTrigger.hpp  TrajectoryCommand.cpp  TrajectoryCommand.hpp  TrajectoryInterpolation.hpp  VehicleAutomatedControl.cpp  VehicleAutomatedControl.hpp  VehicleManualControl.cpp  (+7 more)
LabControlCenter/test/: C-USA_Lanker-2_3_T-1_modifed_ids.xml  C-USA_US101-30_1_T-1.xml  CommonRoadTest.cpp  RUS_Bicycle-4_1_T-1.xml  TimerTestRealtime.cpp  TimerTestSimulated.cpp  VisualizationTest.cpp
LabControlCenter/ui/: MainWindow.cpp  MainWindow.hpp  master_layout.glade  style.css
ParamServer/: CMakeLists.txt  build.bash  test.yaml
ParamServer/src/: ParameterServer.cpp  ParameterServer.hpp  ParameterStorage.cpp  ParameterStorage.hpp  Subscriber.hpp  main.cpp
ParamServer/test/: parameterTest.cpp
cpm_lib/: CMakeLists.txt  Doxygen_cpm_bash_descriptions.hpp  QOS_LOCAL_COMMUNICATION.xml.template  build.bash  build_arm.bash  rtigen.bash  rtigen_matlab.m
cpm_lib/dds_idl/: Color.idl  CommonroadDDSGoalState.idl  CommonroadDDSPlanningProblems.idl  CommonroadDDSShape.idl  CommonroadObstacle.idl  CommonroadObstacleList.idl  HLCHello.idl  Header.idl  HlcCommunication.idl  LaneGraphPoint.idl  LaneGraphPositionChange.idl  LaneGraphTrajectory.idl  LaneGraphTrajectoryChanges.idl  LedPoints.idl  Log.idl  LogLevel.idl  Parameter.idl  ParameterRequest.idl  PlanningConfirmation.idl  Point2D.idl  Pose2D.idl  ReadyStatus.idl  RemoteProgramCheck.idl  RoundTripTime.idl  StopRequest.idl  SystemTrigger.idl  TimeStamp.idl  VehicleCommandDirect.idl  VehicleCommandPathTracking.idl  VehicleCommandSpeedCurvature.idl  VehicleCommandTrajectory.idl  VehicleObservation.idl  VehicleState.idl  VehicleStateList.idl  Visualization.idl
cpm_lib/include/: CommandLineReader.hpp  ParameterDistribution.hpp  Publisher.h  myadd.hpp
cpm_lib/qos/: QOS_Library.xml  no_multicast_qos.xml
cpm_lib/rti/: Parameter.cxx  Parameter.hpp  ParameterImpl.cxx  ParameterImpl.h  ParameterImplPlugin.cxx  ParameterImplPlugin.h  ParameterRequest.cxx  ParameterRequest.hpp  ParameterRequestImpl.cxx  ParameterRequestImpl.h  ParameterRequestImplPlugin.cxx  ParameterRequestImplPlugin.h
cpm_lib/src/: CommandLineReader.cpp  ErrorTimerStart.hpp  HLCCommunicator.cpp  InternalConfiguration.cpp  InternalConfiguration.hpp  Logging.cpp  MiddlewareListener.cpp  ParameterDistribution.cpp  ParameterReceiver.cpp  ParameterReceiver.hpp  ParameterServer.cpp  ParameterServer.hpp  ParameterServerDummy.cpp  ParameterStorage.cpp  ParameterStorage.hpp  ParticipantSingleton.cpp  RTTTool.cpp  SimpleTimer.cpp  Subscriber.h  Subscriber.hpp  TimeMeasurement.cpp  Timer.cpp  TimerFD.cpp  TimerFD.hpp  TimerSimulated.cpp  TimerSimulated.hpp  exceptions.cpp  get_time_ns.cpp  myadd.cpp
cpm_lib/test/: QOS_TEST.xml  test_AsyncReader.cpp  test_CommandLineReader.cpp  test_CommandlineReader.cpp  test_HLCCommunicator.cpp  test_InternalConfiguration.cpp  test_MultiVehicleReader.cpp  test_Participant.cpp  test_Reader.cpp  test_ReaderAbstract.cpp  test_Readers.cpp  test_VehicleIDFilteredTopic.cpp  test_Writer.cpp  test_logging.cpp  test_myadd.cpp  test_parameter.cpp  test_rtt.cpp  test_simple_timer.cpp  test_simple_timer_stop.cpp  test_timer.cpp  (+6 more)
ips/: CMakeLists.txt  build.bash
ips2/: CMakeLists.txt  build.bash
lab_control_center/: CMakeLists.txt  Doxygen_lcc_file_descriptions.hpp  LCC.desktop  QOS_PLANNING_PROBLEM.xml  build.bash  commonroad_HomePoses.xml  file_dialog_open_config.config  gdb_run.bash  lab-control-center.desktop  parameters.yaml  run.bash  start_lcc.bash  valgrind_run.bash
labcam/: CMakeLists.txt
mid_level_controller/: CMakeLists.txt  Doxygen_mlc_file_descriptions.hpp  build.bash  deploy.bash  get_all_logs.bash  monitor_log_raspberry.bash  reboot_all_raspberry.bash  reboot_raspberry.bash  run.bash
middleware/: CMakeLists.txt  Doxygen_middleware_file_descriptions.hpp  QOS_LOCAL_COMMUNICATION.xml.template  apache_test_start.bash  build.bash  run.bash
rti_raspberry/: CMakeLists.txt  Toolchain.cmake  build.bash  clock_check.bash  deploy.bash
simple_ips/: CMakeLists.txt  build.bash
vehicle_raspberry_firmware/: CMakeLists.txt  bootloader_raspberry.bash  build.bash  deploy.bash  login_raspberry.bash  reboot_all_raspberry.bash  reboot_raspberry.bash  run.bash  run_simulated.bash  run_w_flexible_domain.bash
vehicle_raspberry_pi_zero_w/: CMakeLists.txt  build.bash  main.c  spi.c  spi.h  udp_tmp.c  udp_tmp.h
(+1721 files in other folders)
